; ModuleID = '/home/carl/AnghaBench/bitwise/ion/extr_gen.c_preprocess_packages.c'
source_filename = "/home/carl/AnghaBench/bitwise/ion/extr_gen.c_preprocess_packages.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@package_list = common dso_local global i32* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @preprocess_packages() #0 {
  %1 = alloca i64, align 8
  store i64 0, i64* %1, align 8
  br label %2

2:                                                ; preds = %13, %0
  %3 = load i64, i64* %1, align 8
  %4 = load i32*, i32** @package_list, align 8
  %5 = call i64 @buf_len(i32* %4)
  %6 = icmp ult i64 %3, %5
  br i1 %6, label %7, label %16

7:                                                ; preds = %2
  %8 = load i32*, i32** @package_list, align 8
  %9 = load i64, i64* %1, align 8
  %10 = getelementptr inbounds i32, i32* %8, i64 %9
  %11 = load i32, i32* %10, align 4
  %12 = call i32 @preprocess_package(i32 %11)
  br label %13

13:                                               ; preds = %7
  %14 = load i64, i64* %1, align 8
  %15 = add i64 %14, 1
  store i64 %15, i64* %1, align 8
  br label %2

16:                                               ; preds = %2
  ret void
}

declare dso_local i64 @buf_len(i32*) #1

declare dso_local i32 @preprocess_package(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
